# Data-Efficiency-Tools

./: CLAUDE.md  README.md  demo1_parquet_vs_csv.ipynb  demo1_parquet_vs_csv.py  demo2_polars_vs_pandas.ipynb  demo2_polars_vs_pandas.py  demo3_duckdb_vs_sql.ipynb  demo3_duckdb_vs_sql.py  pyproject.toml
