[project]
name = "data-efficiency-tools"
version = "0.1.0"
description = "Demos comparing Parquet vs CSV and Polars vs Pandas for the Rwanda country office presentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "polars>=0.20",
  "pyarrow>=15.0",
  "plotly>=5.20",
  "numpy>=1.26",
  "kaleido>=0.2",
  "nbformat>=4.2.0",
  "duckdb>=0.10",
  "psycopg2-binary>=2.9",
  "testing.postgresql>=1.3",
  "sqlalchemy>=2.0",
]
